# obs-virtual-cam

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  buildspec.json
.github/actions/build-plugin/: action.yml
.github/actions/package-plugin/: action.yml
.github/scripts/: .Wingetfile  Build-Windows.ps1  Package-Windows.ps1
.github/scripts/utils.pwsh/: Install-BuildDependencies.ps1
.github/workflows/: build-project.yaml  main.yml  pr-pull.yaml  push.yaml
cmake/: FindFFmpeg.cmake  ObsPluginHelpers.cmake  helpers.cmake
cmake/bundle/windows/: installer-Windows.nsi.in  resource.rc.in
cmake/common/: buildspec_common.cmake
cmake/windows/: buildspec.cmake
cmake/windows/resources/: installer-Windows.iss.in
data/locale/: an-ES.ini  ar-SA.ini  az-AZ.ini  ba-RU.ini  bg-BG.ini  bn-BD.ini  ca-ES.ini  cs-CZ.ini  da-DK.ini  de-DE.ini  el-GR.ini  en-US.ini  eo-UY.ini  es-ES.ini  et-EE.ini  eu-ES.ini  fa-IR.ini  fi-FI.ini  fil-PH.ini  fr-FR.ini  gd-GB.ini  gl-ES.ini  he-IL.ini  hi-IN.ini  hr-HR.ini  hu-HU.ini  hy-AM.ini  id-ID.ini  it-IT.ini  ja-JP.ini  ka-GE.ini  kab-KAB.ini  kmr-TR.ini  ko-KR.ini  lt-LT.ini  lv-LV.ini  mn-MN.ini  ms-MY.ini  nb-NO.ini  nl-NL.ini  (+23 more)
dshowdeps/include/: amfilter.h  cache.h  combase.h  cprop.h  ddmm.h  dsschedule.h  dxmperf.h  fourcc.h  measure.h  outputq.h  perflog.h  pstream.h  refclock.h  reftime.h  renbase.h  seekpt.h  source.h  streams.h  sysclock.h  videoctl.h  vtrans.h  winctrl.h  winutil.h  wxutil.h
src/: OBSBasicVCamConfig.ui  dshow-plugin.cpp  get_format.h  hflip.cpp  plugin-macros.h.in  shared-memory-queue.c  shared-memory-queue.h  virtual-audio.h  virtual-cam.h  virtual_filter.cpp  virtual_filter.h  virtual_main.cpp  virtual_output.cpp  virtual_output.h  virtual_properties.cpp  virtual_properties.h  virtualcam-guid.c.in  virtualcam-guid.h  virtualcam-output.c  virtualcam-output.h  virtualcam.c  virtualcam.cpp  virtualcam.hpp  virtualsource.rc  window-vcam-config.cpp  window-vcam-config.hpp  window-vcam.hpp
src/queue/: share_queue.h  share_queue_read.cpp  share_queue_read.h  share_queue_write.cpp  share_queue_write.h
src/virtual-output/: CMakeLists.txt  hflip.cpp  hflip.h  virtual_filter.cpp  virtual_main.cpp  virtual_output.cpp  virtual_output.h  virtual_properties.cpp  virtual_properties.h  virtualoutput.rc
src/virtual-source/: CMakeLists.txt  clock.cpp  dllmain.cpp  virtual-audio.cpp  virtual-audio.h  virtual-cam.cpp  virtual-cam.h  virtual-source.def  virtual-source.def.in
src/virtualcam-module/: CMakeLists.txt  placeholder.cpp  virtualcam-filter.cpp  virtualcam-filter.hpp  virtualcam-module.cpp
